--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js",
+    "dev": "node index.js",
     "build": "npm install"
   },
   "author": "Shrikrishna Parab",
@@ -19,6 +19,7 @@
     "express-validator": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
+    "mongodb": "^6.8.0",
     "mongoose": "^8.5.2",
     "winston": "^3.14.0"
   },
