--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node index.js",
+    "dev": "nodemon index.js",
     "build": "npm install"
   },
   "author": "Shrikrishna Parab",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1686.0",
     "axios": "^1.7.3",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -21,6 +23,7 @@
     "moment": "^2.30.1",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.2",
+    "multer": "^1.4.5-lts.1",
     "winston": "^3.14.0"
   },
   "devDependencies": {
